--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports:
     rjson
+SystemRequirements:
+    Azure-CLI (https://docs.microsoft.com/es-es/cli/azure/?view=azure-cli-latest)
